apps/apachas/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apachas-backend
  name: apachas-backend
  namespace: apps
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: apachas-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: apachas-backend
    spec:
      containers:
        - env:
            - name: JDBC_URL
              value: jdbc:postgresql://postgresql-primary.postgresql:5432/apachas_prd
            - name: JDBC_USERNAME
              valueFrom:
                secretKeyRef:
                  key: username
                  name: postgres-apps-secret
            - name: JDBC_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: postgres-apps-secret
          image: ghcr.io/jamezrin/apachas-backend:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 10
          name: apachas-backend
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 15
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: harbor-apps-dockerconfig
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
