apps/apachas/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apachas-backend
  namespace: apps
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: apachas-backend
  sessionAffinity: None
  type: ClusterIP
