apps/apachas/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apachas-frontend
  namespace: apps
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: apachas-frontend
  sessionAffinity: None
  type: ClusterIP
