apps/apachas/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: apachas
  namespace: apps
spec:
  rules:
    - host: apachas.jamezrin.com
      http:
        paths:
          - backend:
              service:
                name: apachas-backend
                port:
                  number: 80
            path: /api
            pathType: Prefix
          - backend:
              service:
                name: apachas-frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - apachas.jamezrin.com
      secretName: apachas-tls
